Some fixes and fixing API Docs
